--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@fortawesome/free-brands-svg-icons": "^5.3.1",
     "@fortawesome/free-solid-svg-icons": "^5.3.1",
     "@fortawesome/react-fontawesome": "^0.1.3",
+    "@loadable/component": "^5.10.3",
+    "@loadable/server": "^5.10.3",
     "@material-ui/core": "^4.6.1",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/styles": "^4.6.0",
+    "@reach/router": "^1.2.1",
     "classnames": "^2.2.6",
-    "connected-react-router": "^6.4.0",
-    "core-js": "^3.1.4",
+    "common-tags": "^1.8.0",
     "crypto-js": "^3.1.9-1",
     "express": "^4.17.1",
     "history": "^4.9.0",
@@ -32,22 +34,19 @@
     "lodash": "^4.17.11",
     "lozad": "^1.9.0",
     "prop-types": "^15.7.2",
-    "qs": "^6.9.1",
     "razzle": "^3.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
-    "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
-    "regenerator-runtime": "^0.13.2",
     "serialize-javascript": "^1.5.0",
     "shortid": "^2.2.14",
-    "superagent": "^5.1.0",
-    "webpack-pwa-manifest": "^3.7.1",
-    "workbox-webpack-plugin": "^3.5.0"
+    "superagent": "^5.1.0"
   },
   "devDependencies": {
+    "@loadable/babel-plugin": "^5.10.3",
+    "@loadable/webpack-plugin": "^5.7.1",
     "babel-eslint": "^10.0.3",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
