--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "redux": "^4.0.4",
+    "redux-first-history": "^4.2.5",
     "redux-thunk": "^2.3.0",
     "serialize-javascript": "^1.5.0",
     "shortid": "^2.2.14",
