--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "common-tags": "^1.8.0",
     "crypto-js": "^3.1.9-1",
     "express": "^4.17.1",
+    "firebase-admin": "^8.8.0",
     "history": "^4.9.0",
     "intersection-observer": "^0.7.0",
     "isomorphic-fetch": "^2.2.1",
