--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@reach/router": "^1.2.1",
     "classnames": "^2.2.6",
     "common-tags": "^1.8.0",
+    "compression": "^1.7.4",
     "crypto-js": "^3.1.9-1",
     "express": "^4.17.1",
     "firebase-admin": "^8.8.0",
@@ -44,6 +45,8 @@
     "@loadable/babel-plugin": "^5.10.3",
     "@loadable/webpack-plugin": "^5.7.1",
     "babel-eslint": "^10.0.3",
+    "brotli-webpack-plugin": "^1.1.0",
+    "compression-webpack-plugin": "^3.0.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.4",
