--- a/firebase.json
+++ b/firebase.json
@@ -3,12 +3,21 @@
     "rules": "database.rules.json"
   },
   "hosting": {
-    "public": "build",
+    "public": "build/public",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**/**",
+        "function": "app"
+      }
     ]
+  },
+  "functions": {
+    "source": "."
   },
   "storage": {
     "rules": "storage.rules"
