--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "test": "razzle test --env=jsdom",
     "start:prod": "NODE_ENV=production node build/server.js"
   },
+  "engines": {
+    "node": "10"
+  },
   "dependencies": {
     "@firebase/app": "^0.4.7",
     "@firebase/auth": "^0.11.3",
@@ -26,6 +29,7 @@
     "crypto-js": "^3.1.9-1",
     "express": "^4.17.1",
     "firebase-admin": "^8.8.0",
+    "firebase-functions": "^3.3.0",
     "history": "^4.9.0",
     "intersection-observer": "^0.7.0",
     "lodash": "^4.17.11",
