chore(deployment): add firebase tools and script to deploy

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "razzle start",
     "build": "razzle build",
     "test": "razzle test --env=jsdom",
-    "start:prod": "NODE_ENV=production node build/server.js"
+    "start:prod": "NODE_ENV=production node build/server.js",
+    "deploy": "yarn build && firebase deploy"
   },
   "engines": {
     "node": "10"
@@ -57,6 +58,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.3",
+    "firebase-tools": "^7.8.1",
     "prettier": "^1.15.3",
     "prettier-eslint": "^8.8.2"
   },
