--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "start:prod": "NODE_ENV=production node build/server.bundle.js",
     "deploy": "yarn build && firebase deploy"
   },
+  "resolutions": {
+    "react-helmet/react-side-effect": "2.1.0"
+  },
   "engines": {
     "node": "10"
   },
@@ -39,6 +42,7 @@
     "razzle": "^3.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-helmet": "^5.2.1",
     "react-redux": "^7.1.3",
     "redux": "^4.0.4",
     "redux-first-history": "^4.2.5",
